# digital_home_backend

./: .dockerignore  .env.example  .env.prod.example  .gitignore  API_DOCS.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  TESTING_ENCRYPTION.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  release.sh  requirements.txt  setup-uv.sh  test_api.py  test_encryption.py
.github/workflows/: docker-build.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial.py  002_add_todo.py  003_add_category_to_todo_table.py  004_add_note.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  family.py  milestone.py  note.py  todo.py
app/core/: config.py  security.py
app/db/: init_db.py  session.py
app/models/: __init__.py  family.py  milestone.py  note.py  todo.py  user.py
nginx/: nginx.conf
